--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.11"
   },
